# FarmerApp_Gemini

./: .env  .env.example  README.md  pyproject.toml
docs/: architecture.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: agriweather.ts  client.ts
frontend/src/components/: DeepInsights.tsx  IndicatorCard.test.tsx  IndicatorCard.tsx  WeatherVisuals.tsx
src/agriweather/: __init__.py  config.py  main.py
src/agriweather.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agriweather/models/: weather.py
src/agriweather/routes/: __init__.py  advisories.py  weather.py
src/agriweather/services/: __init__.py  agronomy.py  gemini_client.py  weather_client.py
tests/: conftest.py  test_agronomy.py  test_weather_client.py
